--- a/style.css
+++ b/style.css
@@ -1,84 +1,198 @@
-aside {
-  width: 40%;
-  padding-left: 0.5rem;
-  margin-left: 0.5rem;
-  float: right;
-  box-shadow: inset 5px 0 5px -5px #29627e;
-  font-style: italic;
-  color: #29627e;
+*{
+  padding: 0;
+  margin: 0;
 }
 
-aside > p {
-  margin: 0.5rem;
+header{
+  background-color:rgba(35, 28, 26, 0.8);
+  height: 80px;
+  width: 100%;
+  position: relative;
 }
 
-data:hover::after {  
-content: " (ID " attr(value) ")";  
-font-size: 0.5em;
+h1{
+  position: absolute;
+  left: 50px;
+  top:0;
+  line-height: 90px;
+  background-image:url(photo/logo.svg);
+  background-repeat:no-repeat;
+  background-position:center ;
+  width:350px;
+  text-indent: -99999px;
 }
 
-label {  
-display: block;  
-margin-bottom: 10px;
+header ul{
+  position:absolute;
+  right:5vw;
+  top:0;
+  line-height: 80px;
 }
 
-details {
-  font:
-    16px 
-"Open Sans",
-    Calibri
-,
-    sans-serif
-;
-  width: 620px;
+header li {
+  display: inline;
+  margin-right: 4vw;
 }
 
-details > summary {
-  padding: 2px 6px;
-  width: 15em;
-  background-color: #ddd;
-  border: none;
-  box-shadow: 3px 3px 4px black;
+header a{
+  color:lightgray;
+  text-decoration: none;
+}
+
+header a:hover{
+  text-decoration: underline;
+}
+
+
+.xuzhi{
+  background-color: antiquewhite;
+}
+
+.news{
+  background-color: antiquewhite;
+  color:#fef7e6 ;
+  height: 95vh;
+  background-image: url("photo/.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.news h2{
+  font-size: 60px;
+  margin-top: 60px;
+}
+
+.news p{
+  color: #fef7e6;
+  font-size: 18px;
+  margin: 25px 0;
+}
+
+.news a{
+  color: white;
+  text-decoration: none;
+  border: 1px solid #ceacac;
+  padding: 10px 20px;
+  border-radius: 5px;
+}
+
+.slogan{
+  background-color: #485652;
+  color: white;
+  height:250px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  line-height: 1.8em;
+ 
+}
+
+.pinjia{
+    background-color: #485652;
+  color: white;
+  height:250px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  line-height: 1.8em;
+}
+
+.nessletter{
+   background-color: #485652;
+   color: white;
+   padding: 60px 0;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+}
+
+.nessletter{
+  margin-bottom: 20px;
+}
+
+.nessletter input,.nessletter button{
+  background-color: transparent;
+  color:white;
+  border: 1px solid #949d9a;
+  padding:10px ;
+  border-radius: 5px;
+}
+
+.nessletter input{
+  width:200px;
+  margin-right: 15px;
+}
+
+.nessletter button{
+  width:80px;
   cursor: pointer;
 }
 
-details > p {
-  border-radius: 0 0 10px 10px;
-  background-color: #ddd;
-  padding: 2px 6px;
-  margin: 0;
-  box-shadow: 3px 3px 4px black;
-}
-
-details[open] > summary {
-  background-color: #ccf;
-}
-
-body{
-    background-image: url('background.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-}
-
-label {
-  display: block;
-  margin-bottom: 10px;
-}
-
-menu,
-ul 
-{
+footer{
+  background-color: #000000;
+  color: #b7b7b7;
+  height:150px;
   display: flex;
-  list-style: none;
-  padding: 0;
-  width: 400px;
+  align-items: center;
+  font-size: 14px;
+  justify-content: center;
 }
 
-li {
-  flex-grow: 1;
+footer a{
+text-decoration: none;
+color:#fef7e6
 }
 
-button {
-  width: 100%;
+footer a:hover{
+  text-decoration: underline;
+}
+
+footer p{
+  text-decoration: none;
+  color:cornflowerblue
+}
+
+footer p:hover{
+  text-decoration: underline;
+}
+
+footer h2{
+  color:lightskyblue;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.menu {
+    display: none;
+}
+
+/*响应式设计语法*/
+@media screen and (max-width:768px){
+  header ul{
+    display: none;
+    left:50%;
+    transform: translate(-50%);
+  }
+  .news h2{
+  font-size: 40px;
+  }
+  .menu{
+    display: block;
+    background-color: transparent;
+    color: white;
+    font-size: 35px;
+    position: absolute;
+    top:15px;
+    left:20px;
+    border: none;
+    cursor: pointer;
+  }
 }
