--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ header a:hover{
   background-color: antiquewhite;
   color:#fef7e6 ;
   height: 95vh;
-  background-image: url("photo/.jpg");
+  background-image: url("photo/background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -196,3 +196,4 @@ footer h2{
     cursor: pointer;
   }
 }
+
